# dnd-session-bot

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b5c70630ed5_guild_settings.py  1e9473901cf3_add_guild_settings_table.py  a1b2c3d4e5f6_add_dm_to_campaign.py  b2c3d4e5f6g7_add_is_active_to_campaigns.py  c3d4e5f6g7h8_add_guild_to_user_links.py  c89d3d8c7527_initial.py  d0445d51001d_add_user_links_table.py  d4e5f6g7h8i9_add_dm_prep_tables.py  ea5dea190f25_move_summary_settings_to_campaign_table.py
api/: auth.py  main.py
api/routes/: bot.py  campaigns.py  dm_prep.py  link.py  sessions.py
bot/: config.py  main.py
bot/cogs/: account.py  campaign.py  character.py  help.py  session.py  summary.py
bot/ui/: embeds.py
bot/voice/: recorder.py
core/: db.py
core/models/: __init__.py  campaign.py  character.py  dm_prep.py  session.py  summary.py  user_link.py
core/prompts/: dm_coaching.md  extract_key_moments.md  extract_threads.md  image_scene_description.md  session_intro.md  srd_basics.md  suggest_plot_hooks.md  summarize_session.md
core/services/: campaign_context.py  dm_coach.py  dm_prep.py  image_gen.py  key_moments.py  linking.py  lovable_callback.py  session_processor.py  storage.py  subscription.py  summarizer.py  transcription.py
