[project]
name = "dnd-session-bot"
version = "0.1.0"
description = "Discord bot for D&D session recording, transcription, summarization, and art generation"
requires-python = ">=3.12"
dependencies = [
    "py-cord[voice] @ git+https://github.com/Pycord-Development/pycord@refs/pull/3159/head",
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "celery[redis]>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "boto3>=1.34,<2.0",
    "anthropic>=0.40,<1.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
bot = "bot.main:run"
api = "api.main:run"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*", "core*", "api*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
